--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "nanoajax": "^0.4.3"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.0",
