--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "compile": "webpack && gulp favicon-compile css-compile html-compile",
     "lint": "eslint ./src ./test . && gulp css-format html-format",
     "lint:fix": "eslint ./src ./test . --fix",
-    "mocha": "mocha test/**/*.test.js",
+    "mocha": "mocha --compilers js:babel-core/register test/**/*.test.js",
+    "mocha:watch": "npm run mocha -- --watch --reporter dot",
     "test": "npm run lint && npm run mocha"
   }
 }
