--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "domchanger": "^1.0.2",
     "nanoajax": "^0.4.3"
   },
+  "engines": {
+   "node": ">=6.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
