--- a/package.json
+++ b/package.json
@@ -19,11 +19,22 @@
   "engines": {
     "node": ">=6.0.0"
   },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "reportDir": "out/coverage"
+  },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
     "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
     "csslint": "^1.0.5",
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.0",
@@ -35,16 +46,18 @@
     "htmlhint": "^0.9.13",
     "mocha": "^3.2.0",
     "ncp": "^2.0.0",
+    "nyc": "^10.1.2",
     "rimraf": "^2.5.4",
     "webpack": "^2.2.1"
   },
   "scripts": {
     "clean": "rimraf ./out",
     "compile": "webpack && ncp public/favicon.ico out/public/favicon.ico && gulp css-compile html-compile",
+    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run mocha",
     "lint": "eslint ./src ./test . && htmlhint 'public/*.html' && csslint 'public/main.css'",
     "lint:fix": "eslint ./src ./test . --fix && gulp html-format css-format",
     "mocha": "mocha --compilers js:babel-core/register 'test/**/*.test.js'",
     "mocha:watch": "npm run mocha -- --watch --reporter dot",
-    "test": "npm run lint && npm run mocha"
+    "test": "npm run lint && npm run coverage"
   }
 }
