Fix CSS lint warnings

--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "clean": "rimraf ./out",
     "compile": "webpack && ncp public/favicon.ico out/public/favicon.ico && gulp css-compile html-compile",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run mocha",
-    "lint": "eslint ./src ./test . && htmlhint 'public/*.html' && csslint 'public/main.css'",
+    "lint:css": "csslint 'public/main.css'",
+    "lint:html": "htmlhint 'public/*.html'",
+    "lint:js": "eslint ./src ./test .",
+    "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "lint:fix": "eslint ./src ./test . --fix && gulp html-format css-format",
     "mocha": "mocha --compilers js:babel-core/register 'test/**/*.test.js'",
     "mocha:watch": "npm run mocha -- --watch --reporter dot",
