--- a/package.json
+++ b/package.json
@@ -30,29 +30,34 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-istanbul": "^4.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
     "csslint": "^1.0.5",
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-jsbeautifier": "^2.0.4",
+    "html-webpack-plugin": "^2.28.0",
     "htmlhint": "^0.9.13",
+    "install": "^0.8.7",
     "mocha": "^3.2.0",
     "ncp": "^2.0.0",
     "nyc": "^10.1.2",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   },
   "scripts": {
     "clean": "rimraf ./out",
-    "compile": "webpack && ncp public/favicon.ico out/public/favicon.ico && gulp css-compile html-compile",
+    "compile": "webpack && ncp src/favicon.ico out/public/favicon.ico",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run mocha",
     "lint:css": "csslint 'public/main.css'",
     "lint:html": "htmlhint 'public/*.html'",
