--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "gulp": "^3.9.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-htmlmin": "^3.0.0",
     "gulp-jsbeautifier": "^2.0.4",
     "html-webpack-plugin": "^2.28.0",
     "htmlhint": "^0.9.13",
@@ -59,8 +57,8 @@
     "clean": "rimraf ./out",
     "compile": "webpack && ncp src/favicon.ico out/public/favicon.ico",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run mocha",
-    "lint:css": "csslint 'public/main.css'",
-    "lint:html": "htmlhint 'public/*.html'",
+    "lint:css": "csslint 'src/main.css'",
+    "lint:html": "htmlhint 'src/index.html'",
     "lint:js": "eslint ./src ./test .",
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
     "lint:fix": "eslint ./src ./test . --fix && gulp html-format css-format",
