--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
     "lint:css": "csslint 'src/main.css'",
     "lint:html": "htmlhint 'src/index.html'",
     "lint:js": "eslint ./src ./test .",
+    "lint:js:fix": "npm run lint:js --fix",
     "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
-    "lint:fix": "eslint ./src ./test . --fix && gulp html-format css-format",
+    "lint:fix": "npm run lint:js:fix && gulp html-format css-format",
     "mocha": "mocha --compilers js:babel-core/register 'test/**/*.test.js'",
     "mocha:watch": "npm run mocha -- --watch --reporter dot",
     "test": "npm run lint && npm run coverage"
